--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>Whiskey Drop | Taste a new whiskey every month!</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
-<body>Whiskey Drop | Taste a new whiskey every month!
+<body>
     <article class="container">
         <!-- Callout -->
         <section class="callout">
             <h1>The finest whiskeys delivered to your doorstep.</h1>
-            <p>Sign up today to start receiving the world's best whiskeys every month. First one is free!</p>
+            <p class="lead">Sign up today to start receiving the world's best whiskeys every month. 
+               <s>€19.99</s> <strong><mark>First one is free!</mark></strong></p>
+               <p><small>You must be over 18 to sign up to our service. Please, drink responsibly.</small></p>
         </section>
         <!-- /.callout -->
         <hr>
