--- a/index.html
+++ b/index.html
@@ -64,6 +64,40 @@
         </section>
         <!-- /.features -->
     </article>
+        <!-- Monthly favourites-->
+    <table class="table"> 
+        <h2 class="uppercase">Monthly favourites</h2>
+        <thead class="thead-dark">
+        <tr>
+            <th scope="col">Name</th>
+            <th>Origin</th>
+        </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Jameson</td>
+                <td>Cork, Ireland</td>
+            </tr> 
+            <tr>  
+                <td>Tullamore Dew</td>
+                <td>Offaly, Ireland</td>
+            </tr>
+            <tr>
+                <td>Hibiki </td>
+                <td>Osaka, Japan</td>
+            </tr> 
+            <tr>   
+                <td>Laphroaig</td>
+                <td>Isle of Islay, Scotland</td>
+            </tr> 
+            <tr>   
+                <td>Suntory Whisky Toki</td>
+                <td>Osaka, Japan</td>
+            </tr>
+        </tbody>
+
+    </table>
+    <!-- /.Monthly favourites-->
 </body>
 
 </html>
