--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <!-- Monthly favourites-->
     <table class="table"> 
         <h2 class="uppercase">Monthly favourites</h2>
-        <thead class="thead-dark">
+        <thead class="thead-light">
         <tr>
             <th scope="col">Name</th>
             <th>Origin</th>
