add images to quotes and make them responsive to screen size

--- a/index.html
+++ b/index.html
@@ -46,16 +46,30 @@
             </div>
                 <div class="row">
                     <div class="col-12 col-md-6">
-                        <blockquote class="blockquote">
-                            <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
-                            <p>- Joe Blogs</p>
-                        </blockquote>
+                        <div class="media">
+                            <div class="d-none d-sm-block">
+                                <img src="images/hat-girl.png" alt="A woman wearing a hat" class="rounded-circle mr-3" height="100">
+                                <div class="media-body">
+                            </div>
+                                <blockquote class="blockquote">
+                                    <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
+                                    <p>- Jane Doe</p>
+                                </blockquote>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-12 col-md-6">
-                        <blockquote class="blockquote">
-                            <p>I haven't been sober for months!</p>
-                            <p>- Jane Doe</p>
-                        </blockquote>
+                        <div class="media">
+                            <div class="d-none d-sm-block">
+                                <img src="images/hippie.png" alt="A man wearing sunglasses" class="rounded-circle mr-3" height="100">
+                                <div class="media-body">
+                            </div>
+                                <blockquote class="blockquote">
+                                    <p>I haven't been sober for months!</p>
+                                    <p>- Joe Blogs</p>
+                                </blockquote>
+                            </div>
+                        </div>
                     </div>
                 </div>    
         </section>
