--- a/index.html
+++ b/index.html
@@ -24,15 +24,23 @@
         <!-- Callout -->
         <div class="row">
             <div class="col-12">
-                <section class="callout jumbotron text-center">
-                    <h1>The finest whiskeys delivered to your doorstep.</h1>
-                    <p class="lead">Sign up today to start receiving the world's best whiskeys every month. 
-                    <s class="d-none d-sm-inline">€19.99</s>
-                    <span class="d-inline d-sm-none"><br></span>
-                    <strong><mark>First one is free!</mark></strong></p>
-                    <button class="btn btn-success btn-lg">Sign Up!</button>
-                    <p class="text-muted"><small>You must be over 18 to sign up to our service. Please, drink responsibly.</small></p>
-                </section>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="alert alert-warning">
+                            <strong>sale now on!</strong>We've got a sale on. Get a 12-month subscription for the price of 6!
+                            <a href="">See here for details!</a>
+                        </div>
+                    </div>
+                </div>
+                    <section class="callout jumbotron text-center">
+                        <h1>The finest whiskeys delivered to your doorstep.</h1>
+                        <p class="lead">Sign up today to start receiving the world's best whiskeys every month. 
+                        <s class="d-none d-sm-inline">€19.99</s>
+                        <span class="d-inline d-sm-none"><br></span>
+                        <strong><mark>First one is free!</mark></strong></p>
+                        <button class="btn btn-success btn-lg">Sign Up!</button>
+                        <p class="text-muted"><small>You must be over 18 to sign up to our service. Please, drink responsibly.</small></p>
+                    </section>
             </div>
         </div>
         <!-- /.callout -->
@@ -87,7 +95,7 @@
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="feature">
-                            <h3><i class="fas fa-gift"></i> Feature 1</h3>
+                            <h3><i class="fas fa-gift d-none d-sm-block"></i> Feature 1 <span class="badge badge-success">NEW!</span></h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
@@ -97,7 +105,7 @@
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">    
                         <div class="feature">
-                            <h3><i class="far fa-credit-card"></i> Feature 2</h3>
+                            <h3><i class="far fa-credit-card d-none d-sm-block"></i> Feature 2</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
@@ -107,7 +115,7 @@
                     </div>
                     <div class="col-12 d-md-none d-lg-block col-lg-4">
                         <div class="feature">
-                            <h3><i class="far fa-times-circle"></i> Feature 3</h3>
+                            <h3><i class="far fa-times-circle d-none d-sm-block"></i> Feature 3</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
