--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
     </nav>
     <article class="container mt-3">
         <!-- Callout -->
-        <div class="row">
-            <div class="col-12">
-                <div class="row">
+                <div class="row d-none d-sm-block">
                     <div class="col-12">
                         <div class="alert alert-warning">
                             <strong>sale now on!</strong>We've got a sale on. Get a 12-month subscription for the price of 6!
@@ -40,9 +38,7 @@
                         <strong><mark>First one is free!</mark></strong></p>
                         <button class="btn btn-success btn-lg">Sign Up!</button>
                         <p class="text-muted"><small>You must be over 18 to sign up to our service. Please, drink responsibly.</small></p>
-                    </section>
-            </div>
-        </div>
+                    </section>   
         <!-- /.callout -->
         <hr>
 
