--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Whiskey Drop | Taste a new whiskey every month!</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/de851118c5.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
     <!-- nav bar-->
@@ -42,8 +42,8 @@
         </div>
     </nav>
     <!-- /.nav bar-->
-    <article class="container mt-3">
-        <!-- Callout -->
+    <div class="container alert-container">
+                <!-- Alert bar -->
                 <div class="row d-none d-sm-block">
                     <div class="col-12">
                         <div class="alert alert-warning">
@@ -52,99 +52,111 @@
                         </div>
                     </div>
                 </div>
-                    <section class="callout jumbotron text-center">
-                        <h1>The finest whiskeys delivered to your doorstep.</h1>
-                        <p class="lead">Sign up today to start receiving the world's best whiskeys every month. 
-                        <s class="d-none d-sm-inline">€19.99</s>
-                        <span class="d-inline d-sm-none"><br></span>
-                        <strong><mark>First one is free!</mark></strong></p>
-                        <button class="btn btn-success btn-lg" data-toggle="modal" data-target="#signUpModal">Sign Up!</button>
-                        <p class="text-muted"><small>You must be over 18 to sign up to our service. Please, drink responsibly.</small></p>
-                    </section>   
+                 <!-- /.Alert bar -->
+                <!-- Callout -->
+                <div class="callout-container">
+                    <div class="row d-none d-sm-block">
+                        <div class="col-12">
+                            <section class="callout jumbotron text-center">
+                                <h1>The finest whiskeys delivered to your doorstep.</h1>
+                                <p class="lead">Sign up today to start receiving the world's best whiskeys every month. 
+                                <s class="d-none d-sm-inline">€19.99</s>
+                                <span class="d-inline d-sm-none"><br></span>
+                                <strong><mark>First one is free!</mark></strong></p>
+                                <button class="btn btn-success btn-lg" data-toggle="modal" data-target="#signUpModal">Sign Up!</button>
+                                <p class="text-muted"><small>You must be over 18 to sign up to our service. Please, drink responsibly.</small></p>
+                            </section>
+                        </div>
+                    </div>
+                </div>
         <!-- /.callout -->
         <hr>
 
         <!-- Quotes -->
-        <section class="quotes">
-            <div class="row my-5">
-                <div class="col-12">
-                    <h2 class="text-uppercase">Quotes:</h2>
-                </div>    
-            </div>
-                <div class="row">
-                    <div class="col-12 col-md-6">
-                        <div class="media">
-                            <div class="d-none d-sm-block">
-                                <img src="images/hat-girl.png" alt="A woman wearing a hat" class="rounded-circle mr-3" height="100">
-                                <div class="media-body">
-                            </div>
-                                <blockquote class="blockquote">
-                                    <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
-                                    <p>- Jane Doe</p>
-                                </blockquote>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <div class="media">
-                            <div class="d-none d-sm-block">
-                                <img src="images/hippie.png" alt="A man wearing sunglasses" class="rounded-circle mr-3" height="100">
-                                <div class="media-body">
-                            </div>
-                                <blockquote class="blockquote">
-                                    <p>I haven't been sober for months!</p>
-                                    <p>- Joe Blogs</p>
-                                </blockquote>
+        <div class="container container-quotes">
+            <section class="quotes">
+                <div class="row my-5">
+                    <div class="col-12">
+                        <h2 class="text-uppercase">Quotes:</h2>
+                    </div>    
+                </div>
+                    <div class="row">
+                        <div class="col-12 col-md-6">
+                            <div class="media">
+                                <div class="d-none d-sm-block">
+                                    <img src="images/hat-girl.png" alt="A woman wearing a hat" class="rounded-circle mr-3" height="100">
+                                    <div class="media-body">
+                                </div>
+                                    <blockquote class="blockquote">
+                                        <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
+                                        <p>- Jane Doe</p>
+                                    </blockquote>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>    
-        </section>
+                        <div class="col-12 col-md-6">
+                            <div class="media">
+                                <div class="d-none d-sm-block">
+                                    <img src="images/hippie.png" alt="A man wearing sunglasses" class="rounded-circle mr-3" height="100">
+                                    <div class="media-body">
+                                </div>
+                                    <blockquote class="blockquote">
+                                        <p>I haven't been sober for months!</p>
+                                        <p>- Joe Blogs</p>
+                                    </blockquote>
+                                </div>
+                            </div>
+                        </div>
+                    </div>    
+            </section>
+        </div>
         <!-- /.quotes -->
-        <hr>
+    </div>
 
         <!-- Features -->
-        <section class="features">
-            <div class="row my-5">
-                <div class="col-12">
-                    <h2 class="text-uppercase">Features:</h2>
-                </div>
-            </div>
-                <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="feature">
-                            <h3><i class="fas fa-gift d-none d-sm-block"></i> Feature 1 <span class="badge badge-success">NEW!</span></h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                                ut aliquip ex ea commodo consequat.</p>
-                            <p><a class="btn btn-sm btn-light">Read More</a></p>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4">    
-                        <div class="feature">
-                            <h3><i class="far fa-credit-card d-none d-sm-block"></i> Feature 2</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
-                                ex ea commodo consequat.</p>
-                            <p><a class="btn btn-sm btn-light">Read More</a></p>
-                        </div>
-                    </div>
-                    <div class="col-12 d-md-none d-lg-block col-lg-4">
-                        <div class="feature">
-                            <h3><i class="far fa-times-circle d-none d-sm-block"></i> Feature 3</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
-                                commodo consequat.</p>
-                            <p><a class="btn btn-sm btn-light">Read More</a></p>
-                        </div>
+        <div class="features-container">
+            <section class="features">
+                <div class="row my-5">
+                    <div class="col-12">
+                        <h2 class="text-uppercase">Features:</h2>
                     </div>
                 </div>
-        </section>
+                    <div class="row">
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="feature">
+                                <h3><i class="fas fa-gift d-none d-sm-block"></i> Feature 1 <span class="badge badge-success">NEW!</span></h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                                    ut aliquip ex ea commodo consequat.</p>
+                                <p><a class="btn btn-sm btn-light">Read More</a></p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-4">    
+                            <div class="feature">
+                                <h3><i class="far fa-credit-card d-none d-sm-block"></i> Feature 2</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+                                    ex ea commodo consequat.</p>
+                                <p><a class="btn btn-sm btn-light">Read More</a></p>
+                            </div>
+                        </div>
+                        <div class="col-12 d-md-none d-lg-block col-lg-4">
+                            <div class="feature">
+                                <h3><i class="far fa-times-circle d-none d-sm-block"></i> Feature 3</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea 
+                                    commodo consequat.</p>
+                                <p><a class="btn btn-sm btn-light">Read More</a></p>
+                            </div>
+                        </div>
+                    </div>
+            </section>
+        </div>    
         <!-- /.features -->
-    </article>
+    
         <!-- Monthly favourites-->
     <table class="table"> 
         <h2 class="uppercase">Monthly favourites</h2>
