--- a/index.html
+++ b/index.html
@@ -42,23 +42,24 @@
         </div>
     </nav>
     <!-- /.nav bar-->
-    <div class="container alert-container">
+       <!--  <div class="container alert-container"> -->
                 <!-- Alert bar -->
-                <div class="row d-none d-sm-block">
+            <!-- <div class="row d-none d-sm-block">
                     <div class="col-12">
                         <div class="alert alert-warning">
                             <strong>sale now on!</strong>We've got a sale on. Get a 12-month subscription for the price of 6!
                             <a href="">See here for details!</a>
                         </div>
                     </div>
-                </div>
+                 </div> -->
                  <!-- /.Alert bar -->
-                <!-- Callout -->
-                <div class="callout-container">
-                    <div class="row d-none d-sm-block">
+       <!-- </div> -->        
+                <!-- Callout --> 
+                <div class="container-fluid callout-container">
+                    <div class="row">
                         <div class="col-12">
                             <section class="callout jumbotron text-center">
-                                <h1>The finest whiskeys delivered to your doorstep.</h1>
+                                <h1 class="jumbotron-header">The finest whiskeys delivered to your doorstep.</h1>
                                 <p class="lead">Sign up today to start receiving the world's best whiskeys every month. 
                                 <s class="d-none d-sm-inline">€19.99</s>
                                 <span class="d-inline d-sm-none"><br></span>
@@ -111,7 +112,7 @@
             </section>
         </div>
         <!-- /.quotes -->
-    </div>
+    
 
         <!-- Features -->
         <div class="features-container">
