add style rules to features and quotes headers

--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
 <body>
     <!-- nav bar-->
     <div class="container-fluid navalert-container">
+                <!-- Alert bar -->
+        <div class="container-fluid alert-container"> 
+            <div class="row d-none d-sm-block">
+                <div class="col-12">
+                    <div class="site-wide-alert alert alert-warning">
+                        <strong>sale now on!</strong>We've got a sale on. Get a 12-month subscription for the price of 6!
+                        <a href="">See here for details!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+                 <!-- /.Alert bar -->
+                 
         <nav class="navbar navbar-dark navbar-expand-sm">
             <a href="/" class="navbar-brand">Whiskey Drop</a>
 
@@ -39,23 +52,11 @@
             <div class="d-none d-md-block">
                 <p class="navbar-text my-auto mr-2"><i>Great whiskey delivered to your door!</i></p>
 
-                <a href="/login">Sign in/Sign up</a>
+                <a href="/login" class="btn btn-cta btn--red btn-lg">Sign in/Sign up</a>
             </div>
         </nav>
     </div>
     <!-- /.nav bar-->
-       <!--  <div class="container alert-container"> -->
-                <!-- Alert bar -->
-            <!-- <div class="row d-none d-sm-block">
-                    <div class="col-12">
-                        <div class="alert alert-warning">
-                            <strong>sale now on!</strong>We've got a sale on. Get a 12-month subscription for the price of 6!
-                            <a href="">See here for details!</a>
-                        </div>
-                    </div>
-                 </div> -->
-                 <!-- /.Alert bar -->
-       <!-- </div> -->        
                 <!-- Callout --> 
                 <div class="container-fluid callout-container">
                     <div class="opaque-overlay">
@@ -76,12 +77,10 @@
                     </div>
                 </div>
         <!-- /.callout -->
-        <hr>
-
-        <!-- Quotes -->
+         <!-- Quotes -->
         <div class="container container-quotes">
             <section class="quotes">
-                <div class="row my-5">
+                <div class="row page-header">
                     <div class="col-12">
                         <h2 class="text-uppercase">Quotes:</h2>
                     </div>    
@@ -122,7 +121,7 @@
         <!-- Features -->
         <div class="features-container">
             <section class="features">
-                <div class="row my-5">
+                <div class="row page-header">
                     <div class="col-12">
                         <h2 class="text-uppercase">Features:</h2>
                     </div>
